feat(kebun): add role validation and missing endpoints